--- a/index.html
+++ b/index.html
@@ -430,9 +430,7 @@
       <div id="successMessage" class="text-center mt-3" style="display: none; color: green;">
         Data berhasil disimpan! Kami akan segera menghubungi kamu di saptohendratmoko@gmail.com.
       </div>
-      <div id="errorMessage" class="text-center mt-3" style="display: none; color: red;">
-        Terjadi kesalahan. Silakan coba lagi atau hubungi kami di 081367315144.
-      </div>
+      <div id="errorMessage" class="text-center mt-3" style="display: none; color: red;"></div>
       <div id="userProfile" class="mt-3"></div>
     </div>
   </section>
@@ -544,6 +542,12 @@
     const auth = firebase.auth();
     const db = firebase.firestore();
 
+    // Validate Email Function
+    function isValidEmail(email) {
+      const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+      return emailRegex.test(email);
+    }
+
     // Handle Google Login/Register
     const googleProvider = new firebase.auth.GoogleAuthProvider();
     document.getElementById('googleLogin').addEventListener('click', () => {
@@ -570,8 +574,18 @@
 
     // Handle Email/Password Register
     document.getElementById('emailRegister').addEventListener('click', () => {
-      const email = document.getElementById('registerEmail').value;
+      const email = document.getElementById('registerEmail').value.trim();
       const password = document.getElementById('registerPassword').value;
+      if (!isValidEmail(email)) {
+        document.getElementById('errorMessage').textContent = 'Format email tidak valid!';
+        document.getElementById('errorMessage').style.display = 'block';
+        return;
+      }
+      if (password.length < 6) {
+        document.getElementById('errorMessage').textContent = 'Password minimal 6 karakter!';
+        document.getElementById('errorMessage').style.display = 'block';
+        return;
+      }
       auth.createUserWithEmailAndPassword(email, password).then((userCredential) => {
         const user = userCredential.user;
         saveUserToFirestore(user);
@@ -585,8 +599,13 @@
 
     // Handle Email/Password Login
     document.getElementById('emailLogin').addEventListener('click', () => {
-      const email = document.getElementById('loginEmail').value;
+      const email = document.getElementById('loginEmail').value.trim();
       const password = document.getElementById('loginPassword').value;
+      if (!isValidEmail(email)) {
+        document.getElementById('errorMessage').textContent = 'Format email tidak valid!';
+        document.getElementById('errorMessage').style.display = 'block';
+        return;
+      }
       auth.signInWithEmailAndPassword(email, password).then((userCredential) => {
         const user = userCredential.user;
         updateUserProfile(user);
@@ -630,6 +649,11 @@
         errorMessage.style.display = 'block';
         return;
       }
+      if (!isValidEmail(email)) {
+        errorMessage.textContent = 'Format email tidak valid!';
+        errorMessage.style.display = 'block';
+        return;
+      }
 
       try {
         await db.collection('registrations').add({
@@ -670,8 +694,12 @@
 
     // Show Modal on Page Load
     window.onload = function() {
-      const welcomeModal = new bootstrap.Modal(document.getElementById('welcomeModal'));
-      welcomeModal.show();
+      try {
+        const welcomeModal = new bootstrap.Modal(document.getElementById('welcomeModal'));
+        welcomeModal.show();
+      } catch (error) {
+        console.error('Error showing welcome modal: ', error);
+      }
     };
 
     // Scroll to Top Button
